--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,8 @@
     -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,400;1,300&display=swap"
     rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="../src/index.css" rel="stylesheet">
+  <link href="../src/app.css" rel="stylesheet">
 
 
   <title>Project 3</title>
